<resources>
	<string name="app_name">GameDB</string>
	<string name="title">Title</string>
	<string name="poster">Poster</string>
	<string name="genre">Genre</string>
	<string name="banner">Banner</string>
	<string name="logo">Logo</string>
	<string name="popular">Popular</string>
	<string name="most_popular_games_this_month">Most popular games this month</string>
	<string name="developers">Developers</string>
	<string name="description">Description</string>
	<string name="released">Released on</string>
	<string name="title_home">Home</string>
	<string name="title_search">Search</string>
	<string name="title_favourites">Favourites</string>
	<string name="try_search_a_game">Try search a game!</string>
	<string name="try_add_a_game_to_favourites">Try add a game to Favourites!</string>
	<string name="status">Status</string>
</resources>