<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	app:startDestination="@+id/navigation_home">

	<fragment
		android:id="@+id/navigation_home"
		android:name="id.hanifsr.gamedb.ui.home.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/navigation_search"
		android:name="id.hanifsr.gamedb.ui.search.SearchFragment"
		android:label="@string/title_search"
		tools:layout="@layout/fragment_search" />

	<fragment
		android:id="@+id/navigation_favourites"
		android:name="id.hanifsr.gamedb.ui.favourite.FavouritesFragment"
		android:label="@string/title_favourites"
		tools:layout="@layout/fragment_favourites" />
</navigation>