<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.detail.DetailActivity">

	<ImageView
		android:id="@+id/iv_detail_banner"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:contentDescription="@string/banner"
		android:scaleType="centerCrop"
		app:layout_constraintBottom_toBottomOf="@id/guideline"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:src="@android:color/darker_gray" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.4" />

	<androidx.cardview.widget.CardView
		android:id="@+id/cv_detail_poster"
		android:layout_width="100dp"
		android:layout_height="150dp"
		android:layout_marginStart="16dp"
		app:cardCornerRadius="4dp"
		app:layout_constraintBottom_toBottomOf="@id/guideline"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@id/guideline">

		<ImageView
			android:id="@+id/iv_detail_poster"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:contentDescription="@string/poster"
			android:scaleType="fitXY"
			tools:src="@color/blue_900_light" />

	</androidx.cardview.widget.CardView>

	<TextView
		android:id="@+id/tv_detail_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:textColor="@color/black"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/cv_detail_poster"
		app:layout_constraintTop_toBottomOf="@id/guideline"
		tools:text="@string/title" />

	<TextView
		android:id="@+id/tv_detail_genre"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="8dp"
		android:textSize="14sp"
		android:textStyle="italic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/cv_detail_poster"
		app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
		tools:text="@string/genre" />

</androidx.constraintlayout.widget.ConstraintLayout>