<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.home.HomeFragment">

	<ProgressBar
		android:id="@+id/pb_home"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tv_popular"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="18dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="18dp"
		android:text="@string/popular"
		android:textColor="@color/black"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tv_this_month"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="18dp"
		android:layout_marginEnd="18dp"
		android:text="@string/most_popular_games_this_month"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_popular" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rv_games"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:clipToPadding="false"
		android:paddingStart="12dp"
		android:paddingEnd="12dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_this_month"
		tools:listitem="@layout/item_games_horizontal" />

	<TextView
		android:id="@+id/tv_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="12dp"
		android:layout_marginEnd="12dp"
		android:textAlignment="center"
		android:textColor="@color/black"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/rv_games"
		tools:text="@string/title" />

	<TextView
		android:id="@+id/tv_genre"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="12dp"
		android:layout_marginEnd="12dp"
		android:textAlignment="center"
		android:textColor="@color/black"
		android:textSize="14sp"
		android:textStyle="italic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_title"
		tools:text="@string/genre" />

</androidx.constraintlayout.widget.ConstraintLayout>